@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-10T01:16:53Z",
-  "count_outdated" : 1978,
-  "uniques_outdated" : 1216,
-  "count" : 1993,
-  "uniques" : 1231,
+  "timestamp" : "2025-10-11T01:14:07Z",
+  "count_outdated" : 1979,
+  "uniques_outdated" : 1217,
+  "count" : 1994,
+  "uniques" : 1232,
   "clones" : [
-    {
-      "timestamp": "2025-09-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-28T00:00:00Z",
       "count": 1,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-10-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
