@@ -1,12 +1,7 @@
 {
   "count": 15,
-  "uniques": 6,
+  "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2025-09-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-28T00:00:00Z",
       "count": 1,
@@ -54,6 +49,11 @@
     },
     {
       "timestamp": "2025-10-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-10T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
